Warning fixes and minor appveyor/travis updates

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -80,14 +80,14 @@ install:
       $env:TEMP = "C:\Users\appveyor\CTestTemp"
 
   # Install MS-MPI
-  - ps: Start-FileDownload 'https://download.microsoft.com/download/B/2/E/B2EB83FE-98C2-4156-834A-E1711E6884FB/MSMpiSetup.exe' -FileName "./MSMpiSetup.exe"
-  - ps: ./MSMpiSetup.exe -unattend
+  # - ps: Start-FileDownload 'https://download.microsoft.com/download/B/2/E/B2EB83FE-98C2-4156-834A-E1711E6884FB/MSMpiSetup.exe' -FileName "./MSMpiSetup.exe"
+  # - ps: ./MSMpiSetup.exe -unattend
   # Install MS-MPI SDK
-  - ps: Start-FileDownload 'https://download.microsoft.com/download/B/2/E/B2EB83FE-98C2-4156-834A-E1711E6884FB/msmpisdk.msi' -FileName "msmpisdk.msi"
-  - ps: ./msmpisdk.msi /passive
-  - ps: |
-      $env:PATH = "C:\Program Files\Microsoft MPI\Bin;$env:PATH"
-      $env:CMAKE_PREFIX_PATH = "C:\Program Files\Microsoft MPI;C:\Program Files (x86)\Microsoft SDKs\MPI;$env:CMAKE_PREFIX_PATH"
+  # - ps: Start-FileDownload 'https://download.microsoft.com/download/B/2/E/B2EB83FE-98C2-4156-834A-E1711E6884FB/msmpisdk.msi' -FileName "msmpisdk.msi"
+  # - ps: ./msmpisdk.msi /passive
+  # - ps: |
+  #     $env:PATH = "C:\Program Files\Microsoft MPI\Bin;$env:PATH"
+  #     $env:CMAKE_PREFIX_PATH = "C:\Program Files\Microsoft MPI;C:\Program Files (x86)\Microsoft SDKs\MPI;$env:CMAKE_PREFIX_PATH"
 
 build_script:
   - mkdir build-timemory
