--- a/examples/ex-gotcha/CMakeLists.txt
+++ b/examples/ex-gotcha/CMakeLists.txt
@@ -8,12 +8,12 @@ project(timemory-gotcha-Example LANGUAGES C CXX)
 
 include(GNUInstallDirs)
 
-set(timemory_FIND_COMPONENTS_INTERFACE timemory::gotcha-example)
+set(timemory_FIND_COMPONENTS_INTERFACE timemory-gotcha-example)
 set(COMPONENTS compile-options arch vector gotcha)
 find_package(timemory REQUIRED COMPONENTS ${COMPONENTS})
 
 add_library(test_gotcha_lib SHARED test_gotcha_lib.hpp test_gotcha_lib.cpp)
-target_link_libraries(test_gotcha_lib PUBLIC timemory::gotcha-example)
+target_link_libraries(test_gotcha_lib PUBLIC timemory-gotcha-example)
 
 add_executable(test_gotcha test_gotcha.cpp)
 target_link_libraries(test_gotcha test_gotcha_lib)
@@ -26,8 +26,8 @@ install(TARGETS test_gotcha_lib             DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 # if(NOT "timemory-gotcha" IN_LIST timemory_EMPTY_INTERFACE_LIBRARIES)
 #    add_executable(test_gotcha_native test_gotcha_native.cpp)
-#    target_link_libraries(test_gotcha_native timemory::gotcha-example)
+#    target_link_libraries(test_gotcha_native timemory-gotcha-example)
 #    add_executable(test_gotcha_native_mpi test_gotcha_native.cpp)
-#    target_link_libraries(test_gotcha_native_mpi timemory::gotcha-example timemory-mpi)
+#    target_link_libraries(test_gotcha_native_mpi timemory-gotcha-example timemory-mpi)
 #    install(TARGETS test_gotcha_native test_gotcha_native_mpi DESTINATION bin)
 # endif()
