Updates gotcha and caliper submodules
- minor fixes to documentation
- minor update to timemory-config.cmake.in

--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -47,8 +47,7 @@ if(@PROJECT_NAME@_LANGUAGE_STANDARDS)
     set(CMAKE_CUDA_EXTENSIONS @CMAKE_CUDA_EXTENSIONS@ CACHE BOOL "")
 endif()
 
-set(@PROJECT_NAME@_ONETIME_MESSAGE ON CACHE BOOL "Onetime message")
-if(@PROJECT_NAME@_ONETIME_MESSAGE)
+if(NOT @PROJECT_NAME@_ONETIME_MESSAGE_DELIVERED)
     if(NOT @PROJECT_NAME@_FIND_QUIETLY)
         set(_ENABLED ${@PROJECT_NAME@_INTERFACE_LIBRARIES})
         set(_DISABLED ${@PROJECT_NAME@_EMPTY_INTERFACE_LIBRARIES})
@@ -57,10 +56,11 @@ if(@PROJECT_NAME@_ONETIME_MESSAGE)
         foreach(_LIB ${_DISABLED})
             message(STATUS "    ${_LIB}")
         endforeach()
+        message(STATUS "")
+        unset(_DISABLED)
+        unset(_ENABLED)
     endif()
-    set(@PROJECT_NAME@_ONETIME_MESSAGE OFF CACHE BOOL "Onetime message" FORCE)
-    unset(_DISABLED)
-    unset(_ENABLED)
+    set(@PROJECT_NAME@_ONETIME_MESSAGE_DELIVERED ON CACHE BOOL "Onetime message")
 endif()
 
 # languages
